[#2942] Fixed the closing button not clickable
Sorry, I didn’t’t notice this. The z-index got messed up with the
tooltip sitting on top of the X. That tooltip is good but the markup is
not flexible and requires the container to be large in width.

--- a/akvo/rsr/static/styles-src/main.scss
+++ b/akvo/rsr/static/styles-src/main.scss
@@ -4249,6 +4249,14 @@ main.results-page {
         }
     }
     &.quantitativeUpdate {
+        .update-entry-container {
+            &.edit-in-progress {
+                .closingBtn {
+                    z-index: 999;
+                    top: -60px !important;
+                }
+            }
+        }
         .targetLabel {
             & + div {
                 top: -1.35em;
